/newline/
Modified:
* Beam:
	- Beams now have an inherent Sprite object, no longer prone to losing its Sprite reference
	- Changes made to the Sprite provided in the constructor will not be reflected in the Beam, and vis-versa
	- Wrap[S/T]Mode are automatically set to proper values for the spritesheet to loop vertically
/newline/
Fixes:
	- 
/newline/
v1.0.11c -
Additions:
* CharacterMenu:
	- [Get/Set]ActiveStatus()
	- CharacterMenuStatus enum
/newline/
Fixes:
	- Fixed vanilla game crash caused by Hornfel trying to enter new door after losing minecart.
	- Fixed SetRail index checks
/newline/
v1.0.11b -
Bug fixes:
	- Fixed a crash that could occur randomly when using custom item pools
/newline/
v1.0.11a -
Bug fixes:
	- Fixed a division by zero that occured when shuffling an empty item pool
/newline/
v1.0.11 -
Additions:
* Itempools:
	- Added support for new custom itempools through itempools.xml on the content folder
	- Isaac.GetPoolIdByName(poolName) - returns the id of a given custom pool. Returns -1 if the pool is not found.
	- Room:SetItemPool(ItemPoolType PoolType) - Sets the pool to use when the game needs to generate random collectibles in the current room.
	- Room:GetItemPool(int Seed, boolean Raw) - Retrieves the pooltype the game would use to generate random collectibles in the current room.
	- ItemPool:GetNumItemPools() - Retrieves the total number of itempools in the game, including custom itempools.
* GenericPrompt:
	- GenericPrompt constructor
	- Initialize(boolean SmallPrompt = false)
	- Show()
	- IsActive()
	- Update(boolean ProcessInput)
	- Render()
	- SetText(string Text1 = "", string Text2 = "", string Text3 = "", string Text4 = "", string Text5 = "")
	- GetSprite()
	- GetCurrentSelection() - (0 - No, 1 - Yes)
	- GetSubmittedSelection() - (0 - None, 1 - Yes, 2 - No)
* ModCallbacks:
	- POST versions of MC_PRE_PLAYER_ADD/REMOVE_COSTUME
	- MC_POST_FORCE_PILL_EFFECT
	- MC_EVALUATE_CUSTOM_CACHE(Player, CustomCacheTag, float value)